# address-complete-divide-api

./: README.md  docker-compose.yml  pyproject.toml  pytest.xml  requirements.txt  samconfig.toml  template.yaml
.aws-sam/: build.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: refactoring_report.md
.github/workflows/: deploy.yml  linter.yml  pytest.yml
data/: prefecture_names.py  special_city_names.py  ward_names_of_tokyo.py
docker/development/: Dockerfile
src/: main.py
src/functions/: format_zipcode.py  normalize.py
src/interfaces/: address.py
src/routers/: convert.py  default.py
tests/: test_temp.py
tests/functions/: normalize_test.py  test_format_zipcode.py  test_normalize.py
tests/interfaces/address/: address_test.py  test_address.py  test_divide_address.py
tests/interfaces/address/extract/: test_building_name.py  test_city.py  test_house_number.py  test_prefecture.py  test_room_number.py  test_town.py
