[tool.poetry]
name = "address-complete-divide"
version = "0.1.0"
description = ""
authors = ["haruboring"]
readme = "README.md"
packages = [{include = "address_complete_divide"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
mangum = "^0.17.0"
fastapi = "^0.95.1"
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
